--- a/src/main/resources/templates/debit-alert.html
+++ b/src/main/resources/templates/debit-alert.html
@@ -41,10 +41,10 @@
             <p>Dear <b th:text="${name}">Customer</b>,</p>
 
             <div class="alert">
-                <p>Your account has been debited with <b>$<span th:text="${amount}"></span></b></p>
+                <p>Your account has been debited with <b><span th:text="${amount} + ' ' + ${currency}"></span></b></p>
                 <p>Account Number: <b th:text="${accountNumber}"></b></p>
                 <p>Date: <span th:text="${#temporals.format(date, 'dd MMM yyyy, hh:mm a')}"></span></p>
-                <p>Available Balance: <b>$<span th:text="${balance}"></span></b></p>
+                <p>Available Balance: <b><span th:text="${balance} + ' ' + ${currency}"></span></b></p>
             </div>
 
             <p>Thank you for banking with us.</p>
